demo/Part I/networking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: hello
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # service port
      targetPort: 80 # pod port
